# tuitify

./: README.md  main.py  pyproject.toml
src/navidrome/: client.py  config.py  player.py  radio.py  utils.py
src/search/: library.py  searcher.py
src/tui/: artwork.py  config_screen.py  keybindings.py  styles.tcss  tui.py  visualizer.py
src/youtube/: player.py  radio.py  utils.py
tests/: test_app_resilience.py  test_artwork.py  test_client.py  test_library.py  test_player.py  test_utils.py
