[project]
name = "tuitify"
version = "0.1.0"
description = "Terminal-first Navidrome music client with smart autoplay radio."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyinstaller>=6.20.0",
    "python-vlc>=3.0.21203",
    "requests>=2.33.1",
    "textual>=8.2.4",
    "textual-image>=0.12.0",
]

[project.scripts]
tuitify = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
force-include = { "main.py" = "main.py" }
