[project]
name = "tuitify"
version = "0.1.0"
description = "Terminal-first Navidrome music client with smart autoplay radio."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow>=10.0.0",
    "pyinstaller>=6.20.0",
    "python-vlc>=3.0.21203",
    "rapidfuzz>=3.14.5",
    "requests>=2.33.1",
    "textual>=8.2.4",
    "textual-image>=0.12.0",
]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[project.scripts]
tuitify = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
force-include = { "main.py" = "main.py" }
